# yt-rag

./: .gitignore  .pre-commit-config.yaml  Dockerfile  app.py  databricks.yml  docker-compose.yml  log_config.yml  pyproject.toml
conf/: dev_config.yml
tests/unit/: conftest.py  test_utils.py
tests/unit/tasks/vs/: test_chunk.py  test_embedding.py
tests/unit/tasks/yt/: test_captions.py
tests/unit/vs/: test_retriever.py
tests/unit/yt/: test_captions.py
yt_rag/: conn.py  params.py  schemas.py  settings.py  utils.py
yt_rag/api/: app.py
yt_rag/tasks/vs/: chunk.py  embedding.py
yt_rag/tasks/yt/: captions.py
yt_rag/vs/: chat.py  embedding.py  prompt.py  rag.py  retriever.py
yt_rag/yt/: captions.py
