[tool.poetry]
name = "yt-rag"
version = "0.1.0"
description = ""
authors = ["Diego Alberto Garrido Amaya <diego.garrido.6568@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
youtube-transcript-api = "^0.6.2"
pydantic = "^2.8.2"
pyspark = "3.5.0"
delta-spark = "3.2.0"
pyarrow = ">=8.0.0"
mlflow = {extras = ["databricks"], version = "2.11.3"}
mlflow-skinny = {extras = ["databricks"], version = "2.11.3"}
llama-index = "^0.10.56"
langchain = "^0.2.8"
langchain-community = "^0.2.7"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
pyright = "^1.1.370"
ruff = "^0.5.1"
pre-commit = "^3.7.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
coverage = "^7.5.4"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
select =[
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "C", # flake8-comprehensions
  "S", # flake8-bandit
]
ignore = [
  "S101", # use assert
  "E501", # line-too-long, handled by black
]
